--- a/src/component/Products/Products.css
+++ b/src/component/Products/Products.css
@@ -35,6 +35,9 @@
     border-radius: 0px 0px 8px 8px;
     position: absolute;
     bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .btn-cart:hover{
